added ProductCard and ProductShowcase components

--- a/app/src/styles/colors.scss
+++ b/app/src/styles/colors.scss
@@ -11,6 +11,7 @@ $grayTextDark: #3f3f40;
 $grayBackgroundInput: #f6f5f2;
 $grayBackgroundCard: #f4f4f4;
 
+$grayCategoryBorder: #bdbdbd;
 $grayCategory: #3b3b3b;
 $grayOldPrice: #808080;
 
