added ProductModal component and implemented it into ProductCard component

--- a/app/src/styles/colors.scss
+++ b/app/src/styles/colors.scss
@@ -1,6 +1,8 @@
 $white: #ffffff;
 $black: #000000;
 
+$blackModal: #222222;
+
 $grayDividerFull: #f0f0f0;
 $grayDividerHalf: #dedede;
 
@@ -19,3 +21,4 @@ $grayFooter: #2a2a2a;
 $grayFooterSecondary: #c0c0c0;
 
 $pinkPrimary: #f71963;
+$bluePrimary: #041e50;
