added product data from api call

--- a/app/src/components/ProductShowcase/ProductShowcase.scss
+++ b/app/src/components/ProductShowcase/ProductShowcase.scss
@@ -103,8 +103,19 @@
     }
 
     section {
+      margin: -25px;
+      padding: 25px;
+      width: 1266px;
+      overflow-x: scroll;
+
       display: flex;
       gap: 62px;
+
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
   }
 }
