--- a/app/src/pages/Home/Home.scss
+++ b/app/src/pages/Home/Home.scss
@@ -1,4 +1,10 @@
 .container {
   display: flex;
   flex-direction: column;
+
+  .banner-card-wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 89px;
+  }
 }
