changed buttons hover from filter to background-color

--- a/app/src/components/Footer/Footer.scss
+++ b/app/src/components/Footer/Footer.scss
@@ -183,7 +183,7 @@
             }
 
             button:hover {
-              filter: brightness(1.2);
+              background-color: $pinkPrimaryHover;
             }
           }
         }
