--- a/app/src/styles/colors.scss
+++ b/app/src/styles/colors.scss
@@ -21,4 +21,5 @@ $grayFooter: #2a2a2a;
 $grayFooterSecondary: #c0c0c0;
 
 $pinkPrimary: #f71963;
+$pinkPrimaryHover: #ff1e77;
 $bluePrimary: #041e50;
