fixed tags missuse and missing style

--- a/app/src/components/Footer/Footer.scss
+++ b/app/src/components/Footer/Footer.scss
@@ -51,6 +51,10 @@
             line-height: 32px;
             text-decoration: none;
             text-transform: uppercase;
+
+            &:hover {
+              text-decoration: underline;
+            }
           }
         }
 
@@ -113,7 +117,7 @@
           justify-content: space-between;
           align-items: center;
 
-          p {
+          div {
             margin: 0;
 
             color: $grayTextDark;
@@ -146,11 +150,15 @@
           }
 
           form {
+            display: flex;
+
             input {
               padding: 0 25px;
               height: 45px;
+              width: 230px;
               box-sizing: border-box;
 
+              outline: none;
               border: 1px solid $grayFooter;
               border-radius: 4px;
               color: $grayTextMedium;
