--- a/app/src/components/BrandShowcase/BrandShowcase.scss
+++ b/app/src/components/BrandShowcase/BrandShowcase.scss
@@ -18,15 +18,18 @@ $blueFilter: invert(32%) sepia(79%) saturate(1552%) hue-rotate(175deg) brightnes
   }
 
   .carousel {
+    position: relative;
+
     display: flex;
     align-items: center;
 
     .caret-left,
     .caret-right {
-      position: relative;
+      position: absolute;
       padding: 0;
       height: 56px;
       width: 56px;
+      z-index: 1;
 
       display: flex;
       justify-content: center;
@@ -51,12 +54,13 @@ $blueFilter: invert(32%) sepia(79%) saturate(1552%) hue-rotate(175deg) brightnes
 
       &.caret-left {
         padding: 16px 22px 17px 20px;
-        left: 71px;
+        left: 12px;
+        visibility: hidden;
       }
 
       &.caret-right {
         padding: 16px 20px 17px 22px;
-        right: 71px;
+        right: 12px;
       }
     }
 
@@ -69,6 +73,7 @@ $blueFilter: invert(32%) sepia(79%) saturate(1552%) hue-rotate(175deg) brightnes
       display: flex;
       gap: 40px;
 
+      scroll-behavior: smooth;
       -ms-overflow-style: none;
       scrollbar-width: none;
       &::-webkit-scrollbar {
