--- a/app/src/components/ProductShowcase/ProductShowcase.scss
+++ b/app/src/components/ProductShowcase/ProductShowcase.scss
@@ -81,12 +81,18 @@
   }
 
   .carousel {
+    position: relative;
+
     display: flex;
     align-items: center;
 
     .caret-left,
     .caret-right {
-      position: relative;
+      position: absolute;
+      padding: 0;
+
+      border: none;
+      background: none;
       cursor: pointer;
 
       &:hover {
@@ -94,11 +100,12 @@
       }
 
       &.caret-left {
-        left: -40px;
+        left: -60px;
+        visibility: hidden;
       }
 
       &.caret-right {
-        right: -40px;
+        right: -60px;
       }
     }
 
@@ -111,6 +118,7 @@
       display: flex;
       gap: 62px;
 
+      scroll-behavior: smooth;
       -ms-overflow-style: none;
       scrollbar-width: none;
       &::-webkit-scrollbar {
