fixed icon behavior

--- a/app/src/components/Footer/Footer.scss
+++ b/app/src/components/Footer/Footer.scss
@@ -73,6 +73,12 @@
               height: 22px;
               color: $white;
               text-decoration: none;
+
+              &:hover {
+                path {
+                  fill: $pinkPrimary;
+                }
+              }
             }
           }
         }
